# spdlog_wrapper

./: .clang-format  CMakeLists.txt  package.sh  test.sh
cmake/: FindSpdlog.cmake  mm_logger-config.cmake.in
doc/: API_DOCUMENTATION.md  README.md  README_CN.md  install.md
examples/: CMakeLists.txt  example.cpp  example_multithread.cpp
include/: custom_sink.hpp  mm_logger.hpp  mm_logger.hpp.v21
include/mm_logger/: custom_sink.hpp  mm_logger.hpp  mm_logger_all.hpp
perf_test/: CMakeLists.txt  performance_test.cpp
perf_test/include/: perf_config.h  perf_test.h  test_suites.h  utils.h
perf_test/scripts/: README.md  analyze_perf_results.py  fix_fonts.py  install.sh  perf_monitor.py  requirements.txt  run.sh  run_performance_tests.sh
perf_test/scripts/perf_analyzer/: README.md  __init__.py  data_loader.py  main.py  report.py  utils.py  visualization.py
perf_test/src/: main.cpp  perf_config.cpp  perf_test.cpp  test_suites.cpp  utils.cpp
tests/: CMakeLists.txt  rotation_test.cpp
